[package]
name = "gosub-proc-iso-poc"
version = "0.1.0"
edition = "2021"
description = "Proof of concept for gosub-engine issue #1080: multi-process architecture for security"

[features]
default = ["multi-process"]
# Compiles in the process-isolation architecture (child process spawning,
# Unix-domain-socket transport). Without it the engine is single-process
# only: components run as threads over in-process channels, with the same
# protocol and policy checks. With it, `--single-process` still selects the
# thread setup at run time.
multi-process = []

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# libc: socketpair fd-passing (all Unix) + seccomp syscall numbers (Linux).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# seccomp sandboxing is Linux-only; referenced under cfg(target_os = "linux").
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"

# windows-sys: anonymous-pipe transport (CreatePipe), handle inheritance
# (SetHandleInformation), and the process mitigation policies the sandbox
# backend installs (Set/GetProcessMitigationPolicy, VirtualAlloc for its probes).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
] }
