[package]
name = "gosub-proc-iso-poc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.gosub-proc-iso-poc]
path = ".."

# Detach from any parent workspace, per the cargo-fuzz convention (the parent is
# a bare package today, but this keeps `cargo fuzz` self-contained regardless).
[workspace]

[profile.release]
debug = 1

# Each fuzz target is its own `#![no_main]` binary driven by libFuzzer.
[[bin]]
name = "decode_image"
path = "fuzz_targets/decode_image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ipc_frame"
path = "fuzz_targets/ipc_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ssrf_url"
path = "fuzz_targets/ssrf_url.rs"
test = false
doc = false
bench = false
